# MCP_Packet_Tracer

./: .gitignore  .mcp.json  CLAUDE.md  README.md  REPORT-V2.md  SETUP-GUIDE.md  pyproject.toml
.codex/: config.toml
PTBuilder/: Builder.pts
src/packet_tracer_mcp/: __init__.py  __main__.py  server.py  settings.py
src/packet_tracer_mcp/adapters/mcp/: __init__.py  resource_registry.py  tool_registry.py
src/packet_tracer_mcp/adapters/mcp/tools/: __init__.py  _bridge_helpers.py  bridge_tools.py  catalog_tools.py  (+7 more)
src/packet_tracer_mcp/application/dto/: __init__.py  requests.py  responses.py
src/packet_tracer_mcp/application/use_cases/: __init__.py  explain_plan.py  export_artifacts.py  fix_plan.py  full_build.py  generate_configs.py  generate_script.py  plan_topology.py  validate_plan.py
src/packet_tracer_mcp/domain/models/: __init__.py  errors.py  plans.py  requests.py  topology_analysis.py
src/packet_tracer_mcp/domain/rules/: __init__.py  cable_rules.py  device_rules.py  ip_rules.py
src/packet_tracer_mcp/domain/services/: __init__.py  auto_fixer.py  estimator.py  explainer.py  ip_planner.py  orchestrator.py  presets.py  template_engine.py  topology_analyzer.py  validator.py
src/packet_tracer_mcp/infrastructure/catalog/: __init__.py  aliases.py  cables.py  devices.py  templates.py
src/packet_tracer_mcp/infrastructure/execution/: __init__.py  deploy_executor.py  executor_base.py  live_bridge.py  live_executor.py  manual_executor.py
src/packet_tracer_mcp/infrastructure/generator/: __init__.py  cli_config_generator.py  ptbuilder_generator.py
src/packet_tracer_mcp/infrastructure/persistence/: __init__.py  project_repository.py
src/packet_tracer_mcp/shared/: __init__.py  constants.py  enums.py  logging.py  utils.py
src/packet_tracer_mcp/shared/prompts/: __init__.py  ptbuilder_guide.py
src/packet_tracer_mcp/shared/templates/: __init__.py  acl_dmz.j2  dhcp_server.j2  eigrp_named.j2  hsrp_pair.j2  nat_overload.j2  ospf_basic.j2  stp_rapid.j2  vlan_trunk.j2
tests/: conftest.py  test_auto_fixer.py  test_bridge_parser.py  test_estimator.py  test_explainer.py  test_full_build.py  test_generators.py  test_ip_planner.py  test_persistence.py  test_presets.py  test_regressions_runtime.py  test_resources.py  test_rip_eigrp.py  test_templates.py  test_topology_tools.py  test_validation_upgrade.py  test_validator.py
