[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packet-tracer-mcp"
version = "0.2.0"
description = "MCP server for Cisco Packet Tracer - topology planning, validation, auto-fix, generation, and configuration"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
pt-mcp = "src.packet_tracer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/packet_tracer_mcp"]
