[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packet-tracer-mcp"
version = "0.5.0"
description = "MCP server for Cisco Packet Tracer - topology planning, validation, auto-fix, generation, and configuration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "David" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/David/MCP-Packet-Tracer"
Repository = "https://github.com/David/MCP-Packet-Tracer"
Issues = "https://github.com/David/MCP-Packet-Tracer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4.0",
]

[project.scripts]
pt-mcp = "src.packet_tracer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/packet_tracer_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["packet_tracer_mcp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
